# PE-Hackathon-2026

./: .env.example  .env.railway.setup.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FAILURE-MODES.md  INCIDENT_RESPONSE.md  RAILWAY.md  README.md  SCALE.md  TESTING.md  docker-compose.ha.yml  docker-compose.tls.yml  docker-compose.yml  gunicorn.conf.py  junit.xml  package-lock.json  pyproject.toml  seed.py  setup-railway.js
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  tests.yml
.railway/: config.json
alertmanager/: alertmanager.yml
app/: __init__.py  circuit_breaker.py  database.py  helpers.py  middleware.py  seed.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  redirect.py  urls.py
compose-watchdog/: Dockerfile  discord_notify.py  watchdog.py
csv_data/: urls.csv  users.csv
dashboard/: .dockerignore  Dockerfile  README.md  index.html  next.config.ts  package-lock.json  package.json  railway.toml
dashboard/backend/: Dockerfile  cache.py  db.py  discord_alerter.py  k6_runner.py  kafka_consumer.py  load-test.js  log_filters.py  main.py  railway.toml  requirements.txt  telemetry.py  telemetry_agg.py
dashboard/src/: instrumentation.ts
docs/: ARCHITECTURE.md  CLAUDE.md  DEPLOY-GUIDE.md  DOCUMENTATION.md  INCIDENT_RESPONSE.md  README.md  SCALE.md  TROUBLESHOOTING.md  alerting.md  kafka-streams.md  req.md
docs/Track1Req/: error_handling.md
docs/Track2Req/: bottleneck_analysis.md  bronze_users.md  gold_users.md  silver_users.md  testing.md
k8s/: README.md  configmap-alertmanager.yaml  configmap-prometheus.yaml  configmap-url-shortener.yaml  cronjob-db-backup.yaml  deployment-alertmanager.yaml  deployment-dashboard.yaml  deployment-load-balancer.yaml  deployment-prometheus.yaml  deployment-url-shortener-a.yaml  deployment-url-shortener-b.yaml  deployment-url-shortener.yaml  deployment-user-frontend.yaml  hpa-url-shortener-a.yaml  hpa-url-shortener-b.yaml  hpa-url-shortener.yaml  ingress-url-shortener.yaml  kustomization.yaml  namespace.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  pvc-backups.yaml  rbac-prometheus.yaml  service-alertmanager.yaml  service-dashboard.yaml  service-load-balancer.yaml  service-prometheus.yaml  service-url-shortener-a.yaml  service-url-shortener-b.yaml  service-url-shortener.yaml  service-user-frontend.yaml
load-balancer/: Dockerfile  Dockerfile.tls  docker-entrypoint.sh  nginx.conf  nginx.conf.template  nginx.tls.conf  railway.toml
load-tests/: bronze.js  gold.js  silver.js  stress.js
prometheus/: Dockerfile  prometheus.railway.yml  prometheus.yml  railway.toml
scripts/: ensure-api-replicas.ps1  ensure-api-replicas.sh  ensure_railway_dashboard_db.py  init_db.py  railway-provision.ps1  seed-railway.ps1  seed-railway.sh  start.cmd  start.ps1  start.sh
test/: index.html
tests/: __init__.py  conftest.py  test_health.py  test_routes.py  test_shortener.py
url-shortener/: .env.example  Dockerfile  Dockerfile.kafka-consumer  ERROR_HANDLING.md  README.md  docker-entrypoint.sh  gunicorn.conf.py  kafka_consumer.py  pyproject.toml  railway.toml  seed.py
url-shortener/app/: __init__.py  cache.py  database.py  dynamic_rate_limit.py  http_log_ingest.py  instance_info.py  ip_ban.py  kafka_logging.py  load_test_bypass.py  logging_config.py  metrics.py  middleware.py  request_helpers.py
url-shortener/app/models/: __init__.py  load_test_result.py  url.py  user.py
url-shortener/app/routes/: __init__.py  admin.py  events.py  test_results.py  urls.py  users.py
url-shortener/app/templates/: admin.html  index.html
url-shortener/csv_data/: events.csv
url-shortener/migrations/: 001_noop.sql
url-shortener/scripts/: apply_migrations.py
url-shortener/tests/: test_health.py
user-frontend/: .env.example  Dockerfile  api-config.js  api-config.js.template  components.json  default.conf.template  index.html  package-lock.json  package.json  railway.toml
watchdog-service/: Dockerfile  package-lock.json  package.json  railway.toml
(+159 files in other folders)
