[project]
name = "pe-hackathon-repo"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "mlh-pe-hackathon",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[tool.uv.sources]
mlh-pe-hackathon = { path = "url-shortener", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
# dashboard/backend before url-shortener so `kafka_consumer` resolves to the dashboard consumer
# (url-shortener also has a top-level kafka_consumer.py for the compose log-printer).
pythonpath = ["dashboard/backend", "url-shortener"]
addopts = "-v --cov=url-shortener/app --cov=dashboard/backend --cov-report=term-missing"
markers = [
    "integration: HTTP tests against real URLs (set TEST_LOAD_BALANCER_URL / TEST_NGINX_STUB_STATUS_URL)",
]

# k6 subprocess runner and background Kafka consumer are exercised in integration/manual runs;
# unit coverage here does not reflect their real behavior.
[tool.coverage.run]
omit = [
    "dashboard/backend/k6_runner.py",
    "dashboard/backend/kafka_consumer.py",
]
